[project]
name = "comfyui-zeroshot-mtrans"
description = "An unofficial ComfyUI custom node for [a/Zero-Shot Material Transfer from a Single Image](https://ttchengab.github.io/zest), Given an input image (e.g., a photo of an apple) and a single material exemplar image (e.g., a golden bowl), ZeST can transfer the gold material from the exemplar onto the apple with accurate lighting cues while making everything else consistent."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch", "numpy", "pillow"]

[project.urls]
Repository = "https://github.com/kealiu/ComfyUI-ZeroShot-MTrans"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ZeroShot-MTrans"
Icon = ""
